--- a/hangman.html
+++ b/hangman.html
@@ -6,7 +6,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style.css" type="text/css" />
-	<script src="szubienica.js"></script>
+	<script src="hangman.js"></script>
 
 </head>
 <body>
