--- a/hangman.html
+++ b/hangman.html
@@ -2,7 +2,8 @@
 <html lang="pl">
 <head>
 	<meta charset="utf-8" />
-	<title>Szubienica</title>
+	<title>Hangman game</title>
+	<link rel="icon" type="img/png" sizes="192x192" href="img/icon.png">
 
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style.css" type="text/css" />
